--- a/Ntara Exam/Views/Shared/_Layout.cshtml
+++ b/Ntara Exam/Views/Shared/_Layout.cshtml
@@ -17,7 +17,9 @@
     </environment>
 </head>
 <body>
-    @RenderBody()
+    <div class="container-fluid">
+        @RenderBody()
+    </div>
     <environment names="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
