--- a/Ntara Exam/wwwroot/css/site.css
+++ b/Ntara Exam/wwwroot/css/site.css
@@ -1,3 +1,10 @@
 ﻿body * {
     border: 1px solid black;
 }
+#one {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 50px 0;
+}
