--- a/Ntara Exam/Views/Home/Index.cshtml
+++ b/Ntara Exam/Views/Home/Index.cshtml
@@ -2,17 +2,13 @@
     ViewData["Title"] = "Home Page";
 }
 <div id="one" class="col-xs-12">
-    <h2>Upload a CSV</h2>
+    <h2 id="headline">Upload a CSV</h2>
     <input id="fileInput" type="file" onchange="handleCsv(this.files)" />
 </div>
-<div id="loadingPanel">
-    Loading Panel, displays after pressing load button 
-</div>
-<div class="col-xs-12 data-wrapper">
+<div id="data-wrapper" class="col-xs-12">
+    <input id="search" type="text" placeholder="search here.." class="form-control">
     <select id="filterDropdown">
         <option value="all">All</option>
     </select>
-    <table id="altTable" class="table table-striped">
-
-    </table>
+    <table id="altTable" class="table table-striped"></table>
 </div>
