--- a/Ntara Exam/wwwroot/css/site.css
+++ b/Ntara Exam/wwwroot/css/site.css
@@ -1,10 +1,8 @@
-﻿body * {
-    border: 1px solid black;
-}
-#one {
+﻿#one {
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
+    align-items: center;
     padding: 50px 0;
 }
+#data-wrapper {display: none;}
