Final commit. Forgot to commit frequently so this one is fairly massive. Sorry about that.

--- a/Ntara Exam/wwwroot/css/site.css
+++ b/Ntara Exam/wwwroot/css/site.css
@@ -6,3 +6,11 @@
     padding: 50px 0;
 }
 #data-wrapper {display: none;}
+.results {
+    background-color: blanchedalmond;
+    font-weight: bold;
+    color: #bf6004;
+}
+.wrapper {
+    padding-bottom: 30px;
+}
