--- a/Ntara Exam/Views/Home/Index.cshtml
+++ b/Ntara Exam/Views/Home/Index.cshtml
@@ -6,9 +6,19 @@
     <input id="fileInput" type="file" onchange="handleCsv(this.files)" />
 </div>
 <div id="data-wrapper" class="col-xs-12">
-    <input id="search" type="text" placeholder="search here.." class="form-control">
-    <select id="filterDropdown">
-        <option value="all">All</option>
-    </select>
+    <div class="col-lg-6 wrapper">
+        <div class="input-group">
+            <div id="dropdown" class="input-group-btn">
+                <button id="ddButton" type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                    Columns: All
+                    <span class="caret"></span>
+                </button>
+                <ul id="ddMenu" class="dropdown-menu">
+                    <li><a id="all" href="#">All</a></li>
+                </ul>
+            </div>
+            <input id="search" type="text" class="form-control" placeholder="Search here..">
+        </div>
+    </div>
     <table id="altTable" class="table table-striped"></table>
 </div>
